syntax = "proto3";

import "google/protobuf/empty.proto";

package guru.qa.rococo.grpc;

option java_multiple_files = true;
option java_package = "guru.qa.rococo.grpc";
option java_outer_classname = "RococoPaintingProto";

service RococoPaintingService {
  rpc GetAllPaintings(GetAllPaintingsRequest) returns (GetAllPaintingsResponse);
  rpc GetPaintingById(GetPaintingByIdRequest) returns (Painting);
  rpc GetPaintingByArtistId(GetPaintingByArtistIdRequest) returns (GetAllPaintingsResponse);
  rpc CreatePainting(CreatePaintingRequest) returns (Painting);
  rpc UpdatePainting(UpdatePaintingRequest) returns (Painting);
}

message Painting {
  string id = 1;
  string title = 2;
  string description = 3;
  string content = 4;
  optional string museum_id = 5;
  string artist_id = 6;
}

message GetAllPaintingsRequest {
  int32 size = 1;
  int32 page = 2;
  optional string title = 3;
}

message GetAllPaintingsResponse {
  repeated Painting paintings = 1;
  int64 total_elements = 2;
  int32 total_pages = 3;
  int32 current_page = 4;
  int32 page_size = 5;
}

message GetPaintingByIdRequest {
  string id = 1;
}

message GetPaintingByArtistIdRequest {
  string artist_id = 1;
  int32 size = 2;
  int32 page = 3;
}

message CreatePaintingRequest {
  string title = 1;
  string description = 2;
  string content = 3;
  optional string museum_id = 4;
  string artist_id = 5;
}

message UpdatePaintingRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  string content = 4;
  optional string museum_id = 5;
  string artist_id = 6;
}